<resources>
    <string name="app_name">LearnOpenCV</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>

    <string name="action_calibrate">Calibrate</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating...</string>
    <string name="please_wait">Please, wait</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
</resources>
