<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item android:id="@+id/mn_calibrate"
            android:title="@string/action_calibrate"
            app:showAsAction="ifRoom|withText" />
        <item android:id="@+id/mn_preview_mode"
            android:title="@string/preview_mode">
            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/mn_calibration"
                        android:title="@string/calibration"
                        android:checked="true" />
                    <item android:id="@+id/mn_undistortion"
                        android:title="@string/undistortion" />
                    <item android:id="@+id/mn_comparison"
                        android:title="@string/comparison" />
                </group>
            </menu>
        </item>
    </group>
</menu>

